getting chat up to date

--- a/polls/templates/polls/confirm_match.html
+++ b/polls/templates/polls/confirm_match.html
@@ -44,7 +44,7 @@
 
 <body>
  <!-- ================ Start Header Area ================= -->
-  <header class="default-header">
+ <header class="default-header">
     <nav class="navbar navbar-expand-lg  navbar-light">
       <div class="container">
 <!--        <a class="navbar-brand" href="index.html">-->
@@ -60,16 +60,7 @@
             <li><a href="/quick-tutor/">Home</a></li>
             <li><a href="/quick-tutor/about">About</a></li>
             <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-            <!-- Dropdown -->
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                Join a Chat Room
-              </a>
-              <div class="dropdown-menu">
-                 <a class="dropdown-item" href="/quick-tutor/chat">Enter As a Student </a>
-                <a class="dropdown-item" href="/quick-tutor/chat">Enter As a Tutor</a>
-              </div>
-            </li>
+            <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
