--- a/polls/templates/polls/error_match.html
+++ b/polls/templates/polls/error_match.html
@@ -120,10 +120,10 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-lg-12 banner-right">
           <h1 class="text-white">
-            About Us
+            Tutor was not notified.
           </h1>
           <p class="mx-auto text-white  mt-20 mb-40">
-            In the history of modern astronomy, there is probably no one greater leap forward than the building.
+            Please go back to the "Find a Tutor" tab and click on the part that says "click HERE to request tutor"
           </p>
           <div class="link-nav">
             <span class="box">
