--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -126,75 +126,66 @@
 <body>
   <!-- ================ Start Header Area ================= -->
   <header class="default-header">
-    <nav class="navbar navbar-expand-lg  navbar-light">
-      <div class="container">
-<!--        <a class="navbar-brand" href="index.html">-->
-<!--          <img src="{% static '/polls/images/qt_logo.png' %}" alt="" />-->
-<!--        </a>-->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="lnr lnr-menu"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li><a href="/quick-tutor/">Home</a></li>
-            <li><a href="/quick-tutor/about">About</a></li>
-            <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-            <!-- Dropdown -->
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                Join a Chat Room
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/quick-tutor/chat">Enter As a Student </a>
-                <a class="dropdown-item" href="/quick-tutor/chat">Enter As a Tutor</a>
-              </div>
-            </li>
-
-
-<!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
-                </li>
-             <a class="nav-link" href='/quick-tutor/student_profile'>My Profile<span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
-            {% else %}
-                    <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
-                </a>
-            {% endif %}
-        </li>
-
-
-
+      <nav class="navbar navbar-expand-lg  navbar-light">
+        <div class="container">
+  <!--        <a class="navbar-brand" href="index.html">-->
+  <!--          <img src="{% static '/polls/images/qt_logo.png' %}" alt="" />-->
+  <!--        </a>-->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="lnr lnr-menu"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li><a href="/quick-tutor/">Home</a></li>
+              <li><a href="/quick-tutor/about">About</a></li>
+              <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
+              <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
+  
+  
+  <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
+              {% if user.is_authenticated %}
+                  <li class="nav-item">
+                      <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
+                  </li>
+  
+              <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
+              {% else %}
+                      <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
+                  </a>
+              {% endif %}
+          </li>
+  
+  
+  
               <li><a href="/quick-tutor/contact_us/">Contact Us</a></li>
-
-            <li>
-              <button class="search" >
-                <span class="lnr lnr-magnifier"></span>
-              </button>
-
-
-
-            </li>
-          </ul>
+  
+              <li>
+                <button class="search" >
+                  <span class="lnr lnr-magnifier"></span>
+                </button>
+  
+  
+  
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-
-<!--<div class="search-input" id="search-input-box">-->
-<!--      <div class="container">-->
-
-<!--        <form class="d-flex justify-content-between">-->
-<!--          <input type="text" class="form-control" id="search-input" placeholder="Search Here" />-->
-<!--&lt;!&ndash;          <button class="navbar-toggle" type="submit" data-toggle="collapse" data-target="bs-navbar-collapse" ></button>&ndash;&gt;-->
-<!--          <button type="submit" class="btn"></button>-->
-<!--          <span class="lnr lnr-cross" id="close-search" title="Close Search"></span>-->
-<!--        </form>-->
-<!--      </div>-->
-<!--    </div>-->
-  </header>
+      </nav>
+  
+  <!--<div class="search-input" id="search-input-box">-->
+  <!--      <div class="container">-->
+  
+  <!--        <form class="d-flex justify-content-between">-->
+  <!--          <input type="text" class="form-control" id="search-input" placeholder="Search Here" />-->
+  <!--&lt;!&ndash;          <button class="navbar-toggle" type="submit" data-toggle="collapse" data-target="bs-navbar-collapse" ></button>&ndash;&gt;-->
+  <!--          <button type="submit" class="btn"></button>-->
+  <!--          <span class="lnr lnr-cross" id="close-search" title="Close Search"></span>-->
+  <!--        </form>-->
+  <!--      </div>-->
+  <!--    </div>-->
+    </header>
   <!-- ================ End Header Area ================= -->
 
   <!-- ================ start banner Area ================= -->
