--- a/polls/templates/polls/student_profile.html
+++ b/polls/templates/polls/student_profile.html
@@ -8,45 +8,67 @@
 
 <html lang="en">
   <head>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">Quick Tutor</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-          <div class="p-3 mb-2 bg-gradient-info text-white">.bg-info</div>
-          <div class="p-3 mb-2 bg-gradient-secondary text-white">.bg-gradient-secondary</div>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="/quick-tutor/">Find a Tutor<span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="/quick-tutor/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/quick-tutor/student_profile">My Student Profile<span class="sr-only">(current)</span></a>
-                  </li>
+  <header class="default-header">
+    <nav class="navbar navbar-expand-lg  navbar-light">
+      <div class="container">
+<!--        <a class="navbar-brand" href="index.html">-->
+<!--          <img src="{% static '/polls/images/qt_logo.png' %}" alt="" />-->
+<!--        </a>-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="lnr lnr-menu"></span>
+        </button>
 
-                  <li class="nav-item">
-                      {% if user.is_authenticated %}
-                         <li class="nav-item">
-                         <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
-                  </li>
-
-                         <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
-                      {% else %}
-                         <a class="nav-link" href="{% url 'social:begin' 'google-oauth2' %}">Login<span class="sr-only">(current)</span></a>
-                      {% endif %}
+        <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li><a href="/quick-tutor/">Home</a></li>
+            <li><a href="/quick-tutor/about">About</a></li>
+            <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
+            <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
 
 
+<!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
+                </li>
 
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-          </div>
-      </nav>
+            <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
+            {% else %}
+                    <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
+                </a>
+            {% endif %}
+        </li>
+
+
+
+            <li><a href="/quick-tutor/contact_us/">Contact Us</a></li>
+
+            <li>
+              <button class="search" >
+                <span class="lnr lnr-magnifier"></span>
+              </button>
+
+
+
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+<!--<div class="search-input" id="search-input-box">-->
+<!--      <div class="container">-->
+
+<!--        <form class="d-flex justify-content-between">-->
+<!--          <input type="text" class="form-control" id="search-input" placeholder="Search Here" />-->
+<!--&lt;!&ndash;          <button class="navbar-toggle" type="submit" data-toggle="collapse" data-target="bs-navbar-collapse" ></button>&ndash;&gt;-->
+<!--          <button type="submit" class="btn"></button>-->
+<!--          <span class="lnr lnr-cross" id="close-search" title="Close Search"></span>-->
+<!--        </form>-->
+<!--      </div>-->
+<!--    </div>-->
+  </header>
 
       <div class="container">
         <h2><p class="text-black "> Welcome {{ user.first_name }}!</p></h2>
@@ -63,6 +85,7 @@
               <p class="text-black ">Location: {{user.profile.location}}</p>
               <p class="text-black ">Availability: {{user.profile.availability}}</p>
               <p class="text-black ">Are you a tutor: {{user.profile.student_tutor}}</p>
+              <p class="text-black ">Venmo (for tutors only): {{user.profile.venmo}}</p>
               <p class="text-black ">Skills (for tutors only): {{user.profile.skills}}</p>
               <p class ="text-black ">Student requests (for tutors only)</p>
               <ul>
