--- a/polls/templates/polls/room.html
+++ b/polls/templates/polls/room.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 {% load bootstrap4 %}
 
 <html lang="en">
@@ -62,52 +63,56 @@
             <!--      </div>-->
             <!--    </div>-->
               </header>
-    <meta charset="utf-8"/>
-    <title>Chat Room</title>
-</head>
-<body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br/>
-    <input id="chat-message-input" type="text" size="100"/><br/>
-    <input id="chat-message-submit" type="button" value="Send"/>
-</body>
-<script>
-    var roomName = "{{ room_name|escapejs }}";
-
-    var chatSocket = new WebSocket(
-        'ws://' + window.location.host +
-        '/ws/chat/' + roomName + '/');
-
-    chatSocket.onmessage = function(e) {
-        var data = JSON.parse(e.data);
-        var message = data['message'];
-        document.querySelector('#chat-log').value += (message + '\n');
-    };
-
-    chatSocket.onclose = function(e) {
-        console.error('Chat socket closed unexpectedly');
-    };
-
-    document.querySelector('#chat-message-input').focus();
-    document.querySelector('#chat-message-input').onkeyup = function(e) {
-        if (e.keyCode === 13) {  // enter, return
-            document.querySelector('#chat-message-submit').click();
-        }
-    };
-
-    document.querySelector('#chat-message-submit').onclick = function(e) {
-        var messageInputDom = document.querySelector('#chat-message-input');
-        var message = messageInputDom.value;
-        chatSocket.send(JSON.stringify({
-            'message': message
-        }));
-
-        messageInputDom.value = '';
-    };
-</script>
 
 
 
 
+
+              <head>
+                    <meta charset="utf-8"/>
+                    <title>Chat Room</title>
+                </head>
+                <body>
+                    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
+                    <input id="chat-message-input" type="text" size="100"><br>
+                    <input id="chat-message-submit" type="button" value="Send">
+                    {{ room_name|json_script:"room-name" }}
+                    <script>
+                        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+                
+                        const chatSocket = new WebSocket(
+                            'ws://'
+                            + window.location.host
+                            + '/ws/chat/'
+                            + roomName
+                            + '/'
+                        );
+                
+                        chatSocket.onmessage = function(e) {
+                            const data = JSON.parse(e.data);
+                            document.querySelector('#chat-log').value += (data.message + '\n');
+                        };
+                
+                        chatSocket.onclose = function(e) {
+                            console.error('Chat socket closed unexpectedly');
+                        };
+                
+                        document.querySelector('#chat-message-input').focus();
+                        document.querySelector('#chat-message-input').onkeyup = function(e) {
+                            if (e.keyCode === 13) {  // enter, return
+                                document.querySelector('#chat-message-submit').click();
+                            }
+                        };
+                
+                        document.querySelector('#chat-message-submit').onclick = function(e) {
+                            const messageInputDom = document.querySelector('#chat-message-input');
+                            const message = messageInputDom.value;
+                            chatSocket.send(JSON.stringify({
+                                'message': message
+                            }));
+                            messageInputDom.value = '';
+                        };
+                    </script>
        <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -128,3 +133,7 @@
 </form>
 </body>
 </html>
+
+
+
+
