--- a/polls/templates/polls/cancel_tutor.html
+++ b/polls/templates/polls/cancel_tutor.html
@@ -45,53 +45,53 @@
 <body>
  <!-- ================ Start Header Area ================= -->
  <header class="default-header">
-  <nav class="navbar navbar-expand-lg  navbar-light">
-    <div class="container">
+    <nav class="navbar navbar-expand-lg  navbar-light">
+      <div class="container">
 <!--        <a class="navbar-brand" href="index.html">-->
 <!--          <img src="{% static '/polls/images/qt_logo.png' %}" alt="" />-->
 <!--        </a>-->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="lnr lnr-menu"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="lnr lnr-menu"></span>
+        </button>
 
-      <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li><a href="/quick-tutor/">Home</a></li>
-          <li><a href="/quick-tutor/about">About</a></li>
-          <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-          <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
+        <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li><a href="/quick-tutor/">Home</a></li>
+            <li><a href="/quick-tutor/about">About</a></li>
+            <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
+            <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
-          {% if user.is_authenticated %}
-              <li class="nav-item">
-                  <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
-              </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
+                </li>
 
-          <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
-          {% else %}
-                  <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
-              </a>
-          {% endif %}
-      </li>
-
-
-
-          <li><a href="/quick-tutor/contact_us/">Contact Us</a></li>
-
-          <li>
-            <button class="search" >
-              <span class="lnr lnr-magnifier"></span>
-            </button>
+            <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
+            {% else %}
+                    <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
+                </a>
+            {% endif %}
+        </li>
 
 
 
-          </li>
-        </ul>
+            <li><a href="/quick-tutor/contact_us/">Contact Us</a></li>
+
+            <li>
+              <button class="search" >
+                <span class="lnr lnr-magnifier"></span>
+              </button>
+
+
+
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
 <!--<div class="search-input" id="search-input-box">-->
 <!--      <div class="container">-->
@@ -104,7 +104,7 @@
 <!--        </form>-->
 <!--      </div>-->
 <!--    </div>-->
-</header>
+  </header>
   <!-- ================ End Header Area ================= -->
 
   <!-- ================ start banner Area ================= -->
@@ -113,10 +113,8 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 banner-right">
             <h1 class="text-white">
-              Who's Available?
+              Your tutor has been cancelled.
             </h1>
-            <p class="mx-auto text-white  mt-20 mb-40">
-              In the history of modern astronomy, there is probably no one greater leap forward than the building.
             </p>
             <div class="link-nav">
               <span class="box">
@@ -195,13 +193,11 @@
           <div class="details">
             <div class="d-flex justify-content-between mb-20">
               <p class="name">{{student.location}}</p>
-              <p class="value">$10, Venmo: {{student.venmo}}</p>
-              <a href="{% url 'quick-tutor:add_student' student.user.id %}"> Click HERE to request tutor</a>
-
-              <a href="/quick-tutor/tutor_match/error">
-                <h4>{{student.preferred_name}} -- {{student.skills}} </h4>
-              </a>
-  
+              <p class="value">$10</p>
+            </div>
+            <a href="#">
+              <h4>{{student.preferred_name}} -- {{student.skills}} </h4>
+            </a>
             <div class="bottom d-flex mt-15">
               <ul class="list">
                 <li>
