--- a/polls/templates/polls/confirm_match.html
+++ b/polls/templates/polls/confirm_match.html
@@ -113,10 +113,11 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 banner-right">
             <h1 class="text-white">
-              Your tutor has been notified and will come find you shortly.
+              Your tutor has been notified and will find you shortly.
             </h1>
-            <p class="mx-auto text-white  mt-20 mb-40">
-              Please do not move so your tutor is able to locate you.
+            <p class="mx-auto text-white  mt-20 mb-40"> <a class="nav-link" href = "/quick-tutor/student_page">
+              View and/or cancel your requests here.
+            </a>
             </p>
             <div class="link-nav">
               <span class="box">
