added chat with tutors

--- a/polls/templates/polls/chat.html
+++ b/polls/templates/polls/chat.html
@@ -70,7 +70,7 @@
     <title>Chat Rooms</title>
 </head>
 <body>
-    What chat room would you like to enter?<br>
+    Whose chat room would you like to enter? Please enter their first and last name with no spaces, all lowercase (ex. rachelzhao).<br>
     <input id="room-name-input" type="text" size="100"><br>
     <input id="room-name-submit" type="button" value="Enter">
                 
