integrating tutorrequest model

--- a/polls/templates/polls/tutor_requests.html
+++ b/polls/templates/polls/tutor_requests.html
@@ -61,7 +61,6 @@
             <li><a href="/quick-tutor/about">About</a></li>
             <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
             <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
-            <li><a href =  "/quick-tutor/student_profile>">My Account</a></li>
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
@@ -114,7 +113,7 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 banner-right">
             <h1 class="text-white">
-              Who Have You Requested?
+              Who Requested You?
             </h1>
             <p class="mx-auto text-white  mt-20 mb-40">
               In the history of modern astronomy, there is probably no one greater leap forward than the building.
@@ -180,13 +179,14 @@
       <div class="row justify-content-center section-title">
         <div class="col-lg-12">
           <h2>
-            Tutors You<br />
-            Have Requested
+            Students Who <br />
+            Requested You
           </h2>
         </div>
       </div>
-      {% if sr != 0 %}
-      {% for t_request in sr %}
+
+      {% if tr != 0 %}
+        {% for s_request in tr%}
       <div class="owl-carousel popuar-course-carusel">
         <div class="single-popular-course">
           <div class="thumb">
@@ -194,35 +194,26 @@
           </div>
           <div class="details">
             <div class="d-flex justify-content-between mb-20">
-              <p class="name">{{t_request.tutor.location}}</p>
-              <p class="name">Venmo: {{t_request.tutor.venmo}}</p>
-              <p class="name">Availability: {{t_request.tutor.availability}}</p>
-              <p class="name">Status: {{t_request.progress}}</p>
-              <p class=""name> Date Requested: {{ t_request.pub_date }}</p>
-              <p class="name"><a href="{% url 'quick-tutor:room' t_request.tutor%}">Chat with tutor</a></p>
+              <p class="name">{{s_request.student.location}}</p>
+             <p class="name">Status:{{s_request.progress }}</p>
+              <p class="name"><a href="{% url 'quick-tutor:room' user.username%}">Chat with Student</a></p>
             </div>
             <a href="#">
-              <h4>{{t_request.tutor.preferred_name}} -- {{t_request.tutor.skills}} </h4>
+              <h4>{{s_request.student.preferred_name}} -- {{s_request.subject}} </h4>
             </a>
             <div class="bottom d-flex mt-15">
-              <ul class="list">
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-
-              </ul>
-              <div class="d-flex justify-content-between mb-20">
-              <p class="ml-20"><a href="{% url 'quick-tutor:cancel_ontutor' t_request.id %}">Click here to cancel</a></p>
-
-
-            </div>
-
+              <form action="{% url 'quick-tutor:cancel_ontutor' s_request.id%}" method = "POST">
+                  {% csrf_token %}
+                  <label for="accept_request">Accept Request</label><input type="radio" id="accept_request" name = "request_status" value = "Denied"><br>
+                  <label for="deny_request"> Deny Request</label><input type = "radio" id = "deny_request" name = "request_status" value = "Accepted"><br>
+                  <button type="submit">Update</button>
+              </form>
             </div>
           </div>
         </div>
         {% endfor %}
         {% else %}
-        <p>No people are available.</p>
+        <p>No one has requested you.</p>
         {% endif %}
 
 
